--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ahmed-bally/action-logger",
+   "name": "bim/action-logger",
     "description": "A Laravel package for managing action logging with support for CRUD operations, custom actions, and translations.",
     "type": "library",
     "license": "MIT",
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0",
+       "illuminate/support": "^10.0|^11.0|^12.0",
         "spatie/laravel-activitylog": "^4.0"
     },
     "require-dev": {
@@ -53,4 +53,4 @@
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     }
-} 
+}
